@@ -95,6 +95,12 @@ def test_all():
     # Check database factory functions are wrapped as expected:
 
     expect_exception(xapian.DatabaseOpeningError, None,
+                     xapian.open_stub, "nosuchdir/nosuchdb")
+    # WritableDatabase form not wrapped currently.
+    #expect_exception(xapian.DatabaseCreateError, None,
+    #                 xapian.open_stub, "nosuchdir/nosuchdb", xapian.DB_CREATE)
+
+    expect_exception(xapian.DatabaseOpeningError, None,
                      xapian.brass_open, "nosuchdir/nosuchdb")
     expect_exception(xapian.DatabaseCreateError, None,
                      xapian.brass_open, "nosuchdir/nosuchdb", xapian.DB_CREATE)
